--- a/ssh_for_elk_v4.ipynb
+++ b/ssh_for_elk_v4.ipynb
@@ -108,47 +108,11 @@
         "id": "4r9czFSItFKc",
         "outputId": "d07a5126-2427-463c-9072-eb247ca4a852"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n",
-            "An exception occurred\n"
-          ]
-        },
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-9-752de09a1437>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"An exception occurred\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
       "source": [
         "for i in range(50):\n",
         "    try:\n",
         "        s = pxssh.pxssh()\n",
-        "        if not s.login ('10.19.87.60', 'sahip', '*******'):\n",
+        "        if not s.login ('20.73.62.50', 'vmadmin', '*******'):\n",
         "            print(\"SSH session failed on login.\")\n",
         "            print(str(s))\n",
         "        else:\n",
